<resources>
    <string name="app_name">DrugBug</string>
    <string name="reminder_list_title">Reminders</string>
    <string name="reminder_list_set_positive">Reminder set</string>
    <string name="reminder_list_set_negative">No Reminder set</string>
    <string name="doselist_title">Doses</string>
    <string name="doselist_title_doses_taken">Doses taken</string>
    <string name="doselist_title_doses_future">Future Doses</string>
    <string name="doselist_context_edit">Edit Dose</string>
    <string name="doselist_context_delete">Delete Dose</string>
    <string name="add_dose_button_image_add">Add image</string>
    <string name="add_dose_button_image_change">Change image</string>
    <string name="add_dose_label_name">Medication Name</string>
    <string name="add_dose_label_dosage">Dosage</string>
    <string name="add_dose_label_freq">Frequency</string>
    <string name="add_dose_label_reminder">Set Reminder</string>
    <string name="add_dose_button_save">Save Medication</string>
    <string name="add_dose_title_edit">Edit dose</string>
    <string name="add_dose_title_add">Add Medication</string>
    <string name="preferences_title">Settings</string>
    <string name="detail_dosage_label">Dosage:</string>
    <string name="detail_frequency_label">Frequency:</string>
    <string name="med_image_desc">Medication image</string>
    <string name="detail_button_edit">Edit</string>
    <string name="detail_button_delete">Delete</string>
    <string name="detail_button_taken">Dose taken</string>
    <string name="detail_date_label_taken">Date taken:</string>
    <string name="detail_date_label_future">Date due:</string>
    <string name="main_future_list">View Future Doses</string>
    <string name="main_taken_list">View Taken Doses</string>
    <string name="main_reminder_list">View Reminders</string>
    <string name="dose_list_date_label">Due:</string>
    <string name="dose_list_reminder_set">(Reminder set)</string>
    <string name="preference_keep_time_years">Years:</string>
    <string name="preference_keep_time_months">Months:</string>
    <string name="preference_keep_time_days">Days:</string>
    <string name="context_menu_reminder_unset">Unset reminder</string>
    <string name="menu_edit">Edit</string>
    <string name="menu_delete">Delete</string>
    <string name="menu_list_sort">Sort Order</string>
    <string name="menu_list_sort_date_asc">Date Ascending</string>
    <string name="menu_list_sort_date_dsc">Date Descending</string>
    <string name="menu_list_sort_name">Medication Name</string>
    <string name="menu_add">Add</string>
    <string name="menu_preferences">Settings</string>
    <string name="preferences_numfuturedoses_title">Number of future doses to generate</string>
    <string name="preferences_keeptimetaken_title">How long should taken doses be kept?</string>
    <string name="preferences_keeptimemissed_title">How long should missed doses be kept?</string>
    <string name="preferences_storageloc_title">Image storage location</string>
    <string name="add_dose_error_blank_dosage">Dosage can not be blank</string>
    <string name="add_dose_error_blank_name">Medication name can not be blank</string>
    <string name="add_dose_error_image_cancel">User cancelled</string>
    <string name="error_update_dose">Unable to update dose</string>
    <string name="list_item_current">Current</string>
    <string name="alert_delete_dose_title">Delete Dose</string>
    <string name="alert_delete_dose_message">Are you sure?</string>
    <string name="alert_delete_dose_positive">Yes, delete it</string>
    <string name="alert_delete_dose_negative">No, cancel</string>
    <string name="alert_delete_doses_title">Delete Doses</string>
    <string name="alert_delete_doses_message">Delete all doses for this medication?\nMedication will be archived.</string>
    <string name="alert_delete_doses_positive">Yes, delete them</string>
    <string name="alert_delete_doses_negative">No, cancel</string>
    <string name="alert_delete_med_title">Delete Medication</string>
    <string name="alert_delete_med_message">Delete this medication?</string>
    <string name="alert_delete_med_positive">Yes, delete it</string>
    <string name="alert_delete_med_negative">No, cancel</string>
    <string name="dose_list_toast_removed_ok">Dose has been removed</string>
    <string name="dose_list_toast_removed_error">Error removing dose</string>
    <string name="doselist_toast_reminder_set">Reminder set</string>
    <string name="doselist_toast_db_error_update">Error updating database</string>
    <string name="doselist_title_reminders">Reminders</string>
    <string name="date_format">MM/dd/yyyy h:mm a</string>
    <string name="taken_dialog_title">Take dose</string>
    <string name="dialog_confirm">Are you sure?</string>
    <string name="taken_dialog_positive">Yes, it\'s taken</string>
    <string name="taken_dialog_negative">No, cancel</string>
    <string name="reminder_title">Medication due</string>
    <string name="add_dose_temp_image_filename">temp.jpg</string>
    <string name="sort_order_name_asc">Alphabetical</string>
    <string name="sort_order_name_dsc">Reverse Alphabetical</string>
    <string name="main_medications_list">View Medications</string>
    <string name="detail_date_label">Date:</string>
    <string name="doselist_toast_reminder_unset">Reminder unset</string>
    <string name="context_menu_reminder_set">Set reminder</string>
    <string name="context_menu_taken">Dose is taken</string>
    <string name="context_menu_only_med">Show doses for only this medication</string>
    <string name="menu_list_filter">Filter</string>
    <string name="menu_list_filter_taken">Taken doses</string>
    <string name="menu_list_filter_future">Future doses</string>
    <string name="medication_list_title">Medications</string>
    <string name="help_main">
        <big>View Future doses:</big>\n
            &#160;&#160;&#160;&#160;Takes user to the list of doses due in the future, as well as missed doses in the past\n\n
        <big>View Taken doses:</big>\n
            &#160;&#160;&#160;&#160;Takes user to the list of doses already taken\n\n
        <big>View Reminders:</big>\n
            &#160;&#160;&#160;&#160;Takes the user to the list of doses which have reminders set\n\n
        <big>View Medications:</big>\n
            &#160;&#160;&#160;&#160;Takes the user to the list of all medications
    </string>
    <string name="help_add_dose">
        <big>Medication name:</big>\n
        &#160;&#160;&#160;&#160;Medication name can not be blank\n\n
        <big>Dosage:</big>\n
        &#160;&#160;&#160;&#160;Dosage can not be blank\n\n
        <big>Add Image:</big>\n
        &#160;&#160;&#160;&#160;Enables user to add a picture taken from the camera\n\n
        <big>Frequency:</big>\n
        &#160;&#160;&#160;&#160;Drop down list for choosing medication frequency \n
        &#160;&#160;&#160;&#160;(Currently hard coded)\n\n
        <big>Set Reminder:</big>\n
        &#160;&#160;&#160;&#160;Sets a reminder for the created doses
    </string>
    <string name="help_edit_dose">
        <big>Medication name:</big>\n &#160;&#160;&#160;&#160;Medication name can not be blank\n\n
        <big>Dosage:</big>\n &#160;&#160;&#160;&#160;Dosage can not be blank\n\n
        <big>Add/Change Image:</big>\n &#160;&#160;&#160;&#160;Enables user to add a picture taken from the camera\n\n
        <big>Frequency:</big>\n &#160;&#160;&#160;&#160;Drop down list for choosing medication frequency\n
        &#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;(Currently hard coded)\n\n
        <big>Set Reminder:</big>\n &#160;&#160;&#160;&#160;Sets a reminder for the created doses
    </string>
    <string name="help_settings">
        <big>Number of future doses to generate:</big>\n &#160;&#160;&#160;&#160;When medication is created, this setting determines how many future doses to create\n\n
        <big>How long should taken doses be kept?:</big>\n &#160;&#160;&#160;&#160;Determines how long to keep taken doses\n\n
        <big>How long should missed doses be kept?:</big>\n &#160;&#160;&#160;&#160;Determines how long to keep missed doses\n\n
        <big>Image storage location:</big>\n &#160;&#160;&#160;&#160;External - SD Card, Internal - device memory
    </string>
    <string name="help_list_future">
        <big>Sort Order:\n</big>
        &#160;&#160;&#160;&#160;Sorts list by date ascending, date descending, and medication name\n\n
        <big>Click on list item to bring up detail screen</big>\n
        &#160;&#160;&#160;&#160;<b>Button bar:</b>\n
        &#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;<b>Dose taken:</b>\n
        &#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;Sets dose to taken\n
        &#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;<b>Edit:</b>\n
        &#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;Brings up edit dose activity for selected dose\n
        &#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;<b>Delete:</b>\n
        &#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;Deletes dose\n\n
        <big>Long click on list item shows the context menu:</big>\n
            &#160;&#160;&#160;&#160;<b>Dose is taken:</b>\n
            &#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;Sets dose to taken\n
            &#160;&#160;&#160;&#160;<b>Edit dose: </b>\n
            &#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;Brings up edit dose activity for selected dose\n
            &#160;&#160;&#160;&#160;<b>Delete dose: </b>\n
            &#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;Deletes dose\n
            &#160;&#160;&#160;&#160;<b>Set/Unset reminder:</b>\n
            &#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;Sets reminder if it\'s not set, unsets it when it\'s not\n
            &#160;&#160;&#160;&#160;<b>Show doses for only this medication:</b>\n
            &#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;Shows dose list for only medication of selected dose
    </string>
    <string name="help_list_taken">
        <big>Sort Order:</big> \n
            &#160;&#160;&#160;&#160;Sorts list by date ascending, date descending, and medication name\n\n
        <big>Click on list item to bring up detail screen</big>
    </string>
    <string name="menu_default_help">Help</string>
    <string name="menu_list_filter_none">All doses</string>
</resources>