<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
      xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/menu_list_add"
        android:icon="@drawable/ic_content_add"
        android:showAsAction="ifRoom"
        android:title="@string/menu_add"
        tools:ignore="AppCompatResource"/>

    <item
        android:id="@+id/menu_sort_order"
        android:icon="@drawable/ic_action_sort_2"
        android:showAsAction="ifRoom"
        android:title="@string/menu_list_sort"
        tools:ignore="AppCompatResource">
        <menu>
            <group>
                <item
                    android:id="@+id/menu_sort_order_date_asc"
                    android:title="@string/menu_list_sort_date_asc"/>
                <item
                    android:id="@+id/menu_sort_order_date_dsc"
                    android:title="@string/menu_list_sort_date_dsc"/>
                <item
                    android:id="@+id/menu_sort_order_name"
                    android:title="@string/menu_list_sort_name"/>
            </group>
        </menu>
    </item>

    <item
        android:id="@+id/menu_filter"
        android:icon="@drawable/ic_content_filter_list"
        android:showAsAction="ifRoom"
        android:title="@string/menu_list_filter"
        tools:ignore="AppCompatResource">
        <menu>
            <group>
                <item
                    android:id="@+id/menu_filter_none"
                    android:title="@string/menu_list_filter_none"/>
                <item
                    android:id="@+id/menu_filter_taken"
                    android:title="@string/menu_list_filter_taken"/>
                <item
                    android:id="@+id/menu_filter_future"
                    android:title="@string/menu_list_filter_future"/>
            </group>
        </menu>
    </item>

    <item
        android:id="@+id/menu_list_help"
        android:orderInCategory="300"
        android:icon="@drawable/ic_action_help"
        android:showAsAction="ifRoom"
        android:title="@string/menu_default_help"
        tools:ignore="AppCompatResource"/>

</menu>