<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <net.innit.drugbug.util.NumberPreference
        android:defaultValue="5"
        android:key="NUM_DOSES"
        android:persistent="true"
        android:summary="PLACEHOLDER"
        android:title="@string/preferences_numfuturedoses_title"/>

    <net.innit.drugbug.util.KeepTimePreference
        android:defaultValue="1:0:0"
        android:key="KEEP_TIME_TAKEN"
        android:persistent="true"
        android:summary="PLACEHOLDER"
        android:title="@string/preferences_keeptimetaken_title"/>

    <net.innit.drugbug.util.KeepTimePreference
        android:defaultValue="0:1:0"
        android:key="KEEP_TIME_MISSED"
        android:persistent="true"
        android:summary="PLACEHOLDER"
        android:title="@string/preferences_keeptimemissed_title"/>

    <ListPreference
        android:key="IMAGE_STORAGE"
        android:summary="PLACEHOLDER"
        android:defaultValue="INTERNAL"
        android:title="@string/preferences_storageloc_title"/>


</PreferenceScreen>