<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="15dp"
                    android:orientation="vertical">

        <LinearLayout
            android:id="@+id/llAddMedTop"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/llAddMedNameDose"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:layout_gravity="bottom">

                <TextView
                    android:id="@+id/tvAddMedNameLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:labelFor="@+id/etAddMedName"
                    android:text="@string/add_dose_label_name"/>

                <EditText
                    android:id="@+id/etAddMedName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"/>

            </LinearLayout>

            <ImageButton
                android:id="@+id/ivAddMedImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|bottom"
                android:adjustViewBounds="false"
                android:contentDescription="@string/med_image_desc"
                android:cropToPadding="false"
                android:onClick="onClickAddMedAddImage"
                android:src="@drawable/ic_button_camera"
                />
        </LinearLayout>

        <TextView
            android:id="@+id/tvAddMedDosageLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/llAddMedTop"
            android:labelFor="@+id/etAddMedDosage"
            android:text="@string/add_dose_label_dosage"/>

        <EditText
            android:id="@+id/etAddMedDosage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvAddMedDosageLabel"
            android:inputType="text"/>

        <TextView
            android:id="@+id/tvAddMedDateTimeLabel"
            android:labelFor="@+id/etAddMedDateTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/etAddMedDosage"
            android:layout_marginTop="10dp"
            android:text="@string/add_dose_datetime_label_first"/>

        <EditText
            android:id="@+id/etAddMedDateTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvAddMedDateTimeLabel"
            android:inputType="datetime"/>

        <ImageButton
            android:id="@+id/btnAddMedDate"
            android:padding="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/etAddMedDateTime"
            android:layout_toEndOf="@+id/etAddMedDateTime"
            android:onClick="onClickDatetime"
            android:src="@drawable/ic_button_calendar_day"
            android:contentDescription="@string/add_dose_datetime_calendar_desc"/>

        <TextView
            android:id="@+id/tvAddMedFreqLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/etAddMedDateTime"
            android:layout_marginTop="10dp"
            android:labelFor="@+id/spAddMedFreq"
            android:text="@string/add_dose_label_freq"/>

        <LinearLayout
            android:id="@+id/llAddMedFreq"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvAddMedFreqLabel"
            android:orientation="horizontal">

            <Spinner
                android:id="@+id/spAddMedFreq"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_weight="1"/>

            <CheckBox
                android:id="@+id/cbAddMedReminder"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:checked="false"
                android:paddingEnd="15dp"
                android:text="@string/add_dose_label_reminder"/>
        </LinearLayout>

        <Button
            android:id="@+id/btnAddMedSave"
            android:layout_margin="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/llAddMedFreq"
            android:onClick="onClickAddMedSave"
            android:text="@string/add_dose_button_save"
            android:paddingBottom="10dp"/>


    </RelativeLayout>
</ScrollView>